--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -446,10 +446,10 @@
 .song_random {
     position: absolute;
     left: 1%;
-    top: 3px;
+    top: 2%;
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
 }
 
