--- a/src/public/css/global.css
+++ b/src/public/css/global.css
@@ -1,3 +1,8 @@
+:root {
+    --cursor-default: none;
+    --cursor-click: cursorclickcustom;
+}
+
 * {
     user-select: none;
 }
@@ -15,7 +20,7 @@
     position: absolute;
     top: -20%;
     width: 111px;
-    cursor: pointer;
+    cursor: var(--cursor-click), auto;
 }
 
 .nav_logo_text {
@@ -26,7 +31,7 @@
     font-weight: bold;
     font-family: Gotham, serif;
     font-size: 35px;
-    cursor: pointer;
+    cursor: var(--cursor-click), auto;
 }
 
 .nav_links {
@@ -47,7 +52,7 @@
 
 .nav_link:hover {
     color: #1ed760;
-    cursor: pointer;
+    cursor: var(--cursor-click), auto;
 }
 
 .p {
