--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -1,7 +1,7 @@
 .logo {
     margin-left: 40%;
     width: 10%;
-    cursor: pointer;
+    cursor: var(--cursor-click), auto;
 }
 
 .logo_text {
@@ -10,7 +10,7 @@
     font-family: Gotham, serif;
     font-weight: bold;
     font-size: 35px;
-    cursor: pointer;
+    cursor: var(--cursor-click), auto;
 }
 
 .input {
@@ -76,7 +76,7 @@
 .forgot_pass {
     margin-left: 32.8%;
     font-family: "Circular Book", serif;
-    cursor: pointer;
+    cursor: var(--cursor-click), auto;
 }
 
 .forgot_pass:hover {
@@ -106,7 +106,7 @@
     width: 120px;
     height: 48px;
     border: none;
-    cursor: pointer;
+    cursor: var(--cursor-click), auto;
     letter-spacing: 2px;
 }
 
@@ -132,7 +132,7 @@
     width: 120px;
     height: 48px;
     border: none;
-    cursor: pointer;
+    cursor: var(--cursor-click), auto;
     letter-spacing: 2px;
 }
 
@@ -177,7 +177,7 @@
     width: 450px;
     height: 48px;
     border: none;
-    cursor: pointer;
+    cursor: var(--cursor-click), auto;
     letter-spacing: 2px;
 }
 
