--- a/src/public/css/global.css
+++ b/src/public/css/global.css
@@ -20,7 +20,7 @@
     position: absolute;
     top: -20%;
     width: 111px;
-    cursor: var(--cursor-click), auto;
+    cursor: pointer;
 }
 
 .nav_logo_text {
@@ -31,7 +31,7 @@
     font-weight: bold;
     font-family: Gotham, serif;
     font-size: 35px;
-    cursor: var(--cursor-click), auto;
+    cursor: pointer;
 }
 
 .nav_links {
@@ -52,7 +52,7 @@
 
 .nav_link:hover {
     color: #1ed760;
-    cursor: var(--cursor-click), auto;
+    cursor: pointer;
 }
 
 .p {
