--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -155,21 +155,23 @@
 
 
 .acc_text {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     font-family: "Circular Black", serif;
     font-weight: bold;
     font-size: 18px;
-    margin-left: 63.5%;
-    transform: translateX(-50%);
     margin-top: 10px;
 }
 
 .acc_button {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     color: #6a6a6a;
     font-size: 15px;
     font-family: "Circular Black", serif;
-    margin-left: 34.2%;
-    transform: translateX(-2%);
-    margin-top: 20px;
+    margin-top: 40px;
     background-color: transparent;
     background-image: url("../assets/sign-up-button.png");
     background-size: 450px 48px;
